--- a/config.json
+++ b/config.json
@@ -11,26 +11,26 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-   "WIDTH": 7000,
-  "HEIGHT": 7000,  
+   "WIDTH": 5000,
+  "HEIGHT": 5000,  
   "MODE": "2tdm",  
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "maz4", "maz4","maz4", "norm", "norm","maz4", "maz4", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "maz4", "dom2","norm", "norm", "norm","dom2", "maz4", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "maz4", "dom2","norm", "norm", "norm","dom2", "maz4", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "maz4", "maz4","norm", "norm", "maz4","maz4", "maz4", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "dom1","norm", "dom1", "norm","dom1", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"]
   ],
   "X_GRID": 15,
